more cartogram refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -2466,7 +2466,17 @@ url={https://dspace.mit.edu/handle/1721.1/6060},
   keywords = {languages-benchmarks},
   year     = {2008},
 }
-
+@article{InoueShimizu:2006:CartogramTriangulation,
+  author = {Inoue, Ryo and Shimizu, Eihan},
+  year = {2006},
+  month = {04},
+  pages = {115-125},
+  title = {A New Algorithm for Continuous Area Cartogram Construction
+  with Triangulation of Regions and Restriction on Bearing Changes of Edges},
+  volume = {33},
+  journal = {Cartography and Geographic Information Science},
+  url = {https://www.researchgate.net/publication/220649782_A_new_algorithm_for_distance_cartogram_construction}
+}
 @Article{Ishihara:2006:BishopReverseMathematics,
   author  = {Hajime Ishihara},
   title   = {Reverse Mathematics in Bishop\textquoteright{}s Constructive Mathematics},
@@ -4791,6 +4801,42 @@ Sep 19-21, 2005, Dublin Ireland.},
   year      = {1976},
 }
 
+@techreport{Snyder:1987:MapProjections,
+  abstract = {After decades of using only one map projection, the Polyconic, for
+	its mapping program, the U.S. Geological Survey (USGS) now uses several
+	of the more common projections for its published maps. For larger
+	scale maps, including topographic quadrangles and the State Base
+	Map Series, conformal projections such as the Transverse Mercator
+	and the Lambert Conformal Conic are used. Equal-area and equidistant
+	projections appear in the National Atlas. Other projections, such
+	as the Miller Cylindrical and the Van der Grinten, are chosen occasionally
+	for convenience, sometimes making use of existing base maps prepared
+	by others. Some projections treat the Earth only as a sphere, others
+	as either ellipsoid or sphere. The USGS has also conceived and designed
+	several new projections, including the Space Oblique Mercator, the
+	first map projection designed to permit mapping of the Earth continuously
+	from a satellite with low distortion. The mapping of extraterrestrial
+	bodies has resulted in the use of standard projections in completely
+	new settings. Several other projections which have not been used
+	by the USGS are frequently of interest to the cartographic public.
+	With increased computerization, it is important to realize that rectangular
+	coordinates for all these projections may be mathematically calculated
+	with formulas which would have seemed too complicated in the past,
+	but which now may be programmed routinely, especially if aided by
+	numerical examples. A discussion of appearance, usage, and history
+	is given together with both forward and inverse equations for each
+	projection involved.},
+  author = {Snyder, John P.},
+  institution = {U. S. Geological Survey},
+  number = 1395,
+  publisher = {U.S. G.P.O. : For sale by the Supt. of Docs.},
+  series = {U. S. G. S. Professional Paper},
+  title = {Map projections -- A working manual},
+  url = {https://pubs.usgs.gov/pp/1395/report.pdf},
+  year = 1987
+}
+
+
 @online{Smith:2017:MathTypography,
 author={Eddie Smith},
 title={From boiling lead and black art: An essay on the history of mathematical typography},
@@ -5082,6 +5128,35 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
   journal = {Journal of Statistical Software},
   year    = {2005},
 }
+
+@article{Tobler:2004:ThirtyFiveYearsCartograms,
+  author = {Waldo Tobler},
+  title = {Thirty Five Years of Computer Cartograms},
+  journal = {Annals of the Association of American Geographers},
+  volume = {94},
+  number = {1},
+  pages = {58--73},
+  year = {2004},
+  publisher = {Routledge},
+  URL = {https://people.geog.ucsb.edu/~tobler/publications/reprints.html},
+  abstract = { The notion of a cartogram is reviewed.
+  Then, based on a presentation from the 1960s,
+  a direct and simple introduction is given to the design of a computer algorithm
+  for the construction of contiguous value-by-area cartograms.
+  As an example, a table of latitude/longitude
+  to rectangular plane coordinates is included for a cartogram of the United States,
+  along with Tissot's measures for this map projection.
+  This is followed by a short review of the subsequent history of the subject
+  and includes citation of algorithms proposed by others.
+  In contrast to the usual geographic map,
+  the most common use of cartograms is solely for the display and emphasis of a geographic distribution.
+  A second use is in analysis, as a nomograph or problem-solving device similar in use to Mercator's projection,
+  or in the transform-solve-invert paradigm.
+  Recent innovations by computer scientists modify the objective
+  and suggest variation similar to Airy's (1861) balance of errors idea for map projections. }
+}
+
+
 
 @Article{TomasiKanade:1992:Orthography,
   author  = {Tomasi, C. and Kanade, T.},
