more cartogram refs

--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -101,7 +101,7 @@ url={https://www.gnu.org/software/mit-scheme/} }
 
 @article{AlamEtAl:2015:CartogramGenerationMeasures,
   author = {Alam, Md. Jawaherul and Kobourov, Stephen G. and Veeramoni, Sankar},
-  title = {Quantitative Measures for Cartogram Generation Techniques},
+  title = {Quantitative measures for cartogram generation techniques},
   year = {2015},
   issue_date = {June 2015},
   publisher = {The Eurographs Association \& John Wiley \& Sons, Ltd.},
@@ -113,7 +113,8 @@ url={https://www.gnu.org/software/mit-scheme/} }
   journal = {Comput. Graph. Forum},
   month = {jun},
   pages = {351–360},
-  numpages = {10}
+  numpages = {10},
+  url = {https://raptor.cs.arizona.edu/~kobourov/cartogram_eurovis.pdf},
 }
 @InCollection{sep:LambdaCalculus,
 author={Alama, Jesse and Korbmacher, Johannes},
@@ -154,6 +155,18 @@ year={2019} }
   year      = {1992},
 }
 
+@article{AngelHyman:1972:TransformationsGeographic,
+  author = {Angel, Shlomo and Hyman, Geoffrey M.},
+  title = {Transformations and geographic theory},
+  journal = {Geographical Analysis},
+  volume = {4},
+  number = {4},
+  pages = {350-367},
+  doi = {https://doi.org/10.1111/j.1538-4632.1972.tb00481.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1538-4632.1972.tb00481.x},
+  year = {1972}
+}
+
 @inproceedings{ArkinEtAl:1990:ComparingPolygonShapes,
   author = {Arkin, Esther M. and Chew, L. Paul and Huttenlocher, David P. and Kedem, Klara and Mitchell, Joseph S. B.},
   title = {An efficiently computable metric for comparing polygonal shapes},
@@ -167,7 +180,7 @@ year={2019} }
 }
 @article{ArkinEtAl:1991:ComparingPolygonShapes,
   author = {Arkin, Esther M. and Chew, L. Paul and Huttenlocher, Daniel P. and Kedem, Klara and Mitchell, Joseph S. B.},
-  title = {An Efficiently Computable Metric for Comparing Polygonal Shapes},
+  title = {An efficiently computable metric for comparing polygonal shapes},
   year = {1991},
   issue_date = {March 1991},
   publisher = {IEEE Computer Society},
@@ -189,7 +202,7 @@ year={2019} }
 }
 @Article{Arnon:1983:AlgebraicCurveDisplay,
   author  = {Dennis Arnon},
-  title   = {Topologically Reliable Display of Algebraic Curves},
+  title   = {Topologically reliable display of algebraic curves},
   number  = {3},
   pages   = {219--227},
   volume  = {17},
@@ -241,6 +254,14 @@ year={2019} }
   edition   = {$2$nd~edition},
   publisher = {Oxford U Press},
   year      = {2010},
+}
+
+@PhdThesis{Bader:2001:Thesis,
+  author = {Mathais Bader},
+  title  = {Energy minimization methods for feature displacement in map generalization},
+  school = {Universit\:{a}t Z\:{u}rich},
+  year   = {2001},
+  url = {https://www.geo.uzh.ch/dam/jcr:2c2e14d7-7754-41fe-81b6-fbd6c75b2aed/thesis_MatsBader_2001.pdf},
 }
 
 @Online{Baez:2017:ToposNutshell,
@@ -598,7 +619,7 @@ url={https://github.com/openjdk/jdk/blob/dfacda488bfbe2e11e8d607a6d0852771028698
 
 @Online{BostockHeer:2011:ProtovisDorlingCartogram,
   author = {Mike Bostock and Jeff Heer},
-  title  = {Protovis example: Dorling Carotgram},
+  title  = {Protovis example: Dorling cartogram},
   url    = {http://vis.stanford.edu/protovis/ex/cartogram.html},
   year   = {2011},
 }
@@ -1292,6 +1313,14 @@ url={https://vimeo.com/515592681},
   year     = {1978},
 }
 
+@PhdThesis{Dorling:1991:Thesis,
+  author = {Danny Dorling},
+  title  = {The visualization of spatial social structure},
+  school = {Newcastle upon Tyne},
+  year   = {1991},
+  url = {https://www.dannydorling.org/?page_id=2980},
+}
+
 @Article{Dorling:1996:Area,
 title={Area cartograms: their use and creation},
 author={Dorling, Daniel},
@@ -1300,6 +1329,22 @@ year={1996},
 url = {https://www.dannydorling.org/?page_id=1448},
 publisher={Univ. of East Anglia}
 }
+
+@article{DougenikChrismanNiemeyer:1985:ContinuousAreaCartograms,
+  author = {James A. Dougenik and Nicholas R. Chrisman and Duane R. Niemeyer},
+  title = {An algorithm to construct continuous area cartograms},
+  journal = {The Professional Geographer},
+  volume = {37},
+  number = {1},
+  pages = {75--81},
+  year = {1985},
+  publisher = {Routledge},
+  doi = {10.1111/j.0033-0124.1985.00075.x},
+ URL = {
+https://www.researchgate.net/publication/250016099_A_New_Algorithm_for_Continuous_Area_Cartogram_Construction_with_Triangulation_of_Regions_and_Restriction_on_Bearing_Changes_of_Edges  },
+}
+
+
 
 @Book{Dugac:1976:DedekindFondements,
   author    = {Dugac, P},
@@ -1787,6 +1832,15 @@ url={https://www.fontlab.com/},
   year      = {1986},
 }
 
+@article{FreundschuhEgenhoferHall:1997:ConceptionsSpaces,
+  author = {Freundschuh, Scott and Egenhofer, Max and Hall, Boardman},
+  year = {1997},
+  month = {01},
+  pages = {},
+  title = {Human conceptions of spaces: implications for geographic information systems 1},
+  url = {https://www.researchgate.net/publication/239932736_Human_Conceptions_of_Spaces_Implications_for_Geographic_Information_Systems1},
+}
+
 @Online{Friedman:2008:ElementarySimplicialSets,
   author        = {Greg Friedman},
   title         = {An elementary illustrated introduction to simplicial sets},
@@ -1870,7 +1924,7 @@ url={https://www.fontlab.com/},
   and the spatial distribution of deaths in the London borough of Kensington and Chelsea between 2011 and 2014.}}
 
 @Online{GastnerMiajiSinghania:2022:Pycnophylactic,
-  title={Smooth Pycnophylactic Interpolation Produced by Density-Equalising Map Projections},
+  title={Smooth pycnophylactic interpolation produced by density-equalising map projections},
   author={Gastner, Michael T. and Miaji, Nihal Z. and Singhania, Adi},
   year={2022},
   month=jul,
@@ -2288,7 +2342,7 @@ url={https://dspace.mit.edu/handle/1721.1/6060},
 @INPROCEEDINGS{HeilmannEtAl:2004:Recmap,
   author={Heilmann, R. and Keim, D.A. and Panse, C. and Sips, M.},
   booktitle={IEEE Symposium on Information Visualization},
-  title={RecMap: Rectangular Map Approximations},
+  title={RecMap: rectangular map approximations},
   year={2004},
   pages={33-40},
   keywords={Data visualization;Shape;Humans;Transaction databases;Data analysis;Information analysis;Topology;Computer displays;Automatic control;Visual databases;Geographic Visualization;Information Visualization;Database and Data Mining Visualization},
@@ -2529,11 +2583,18 @@ url={https://dspace.mit.edu/handle/1721.1/6060},
   year = {2006},
   month = {04},
   pages = {115-125},
-  title = {A New Algorithm for Continuous Area Cartogram Construction
-  with Triangulation of Regions and Restriction on Bearing Changes of Edges},
+  title = {A new algorithm for continuous area cartogram construction
+  with triangulation of regions and restriction on bearing changes of edges},
   volume = {33},
   journal = {Cartography and Geographic Information Science},
-  url = {https://www.researchgate.net/publication/220649782_A_new_algorithm_for_distance_cartogram_construction}
+  url = {https://www.researchgate.net/publication/220649782_A_new_algorithm_for_distance_cartogram_construction},
+  annote = {
+  \begin{itemize}
+  \item triangulation incidental to non-linear least squares problem formulation.
+  \item no attempt to interpolate geographic context.
+  \item results are graph layouts that don't appear to have practical value.
+  \end{itemize}
+  },
 }
 @Article{Ishihara:2006:BishopReverseMathematics,
   author  = {Hajime Ishihara},
@@ -3850,8 +3911,17 @@ abstract = {This article investigates the short lived digital typography graduat
 
 @inproceedings{MeulemansEtAl:2010:AreaSchema,
   title = "Area-preserving subdivision schematization",
-  abstract = "We describe an area-preserving subdivision schematization algorithm: the area of each region in the input equals the area of the corresponding region in the output. Our schematization is axis-aligned, the final output is a rectilinear subdivision. We first describe how to convert a given subdivision into an area-equivalent rectilinear subdivision. Then we define two area-preserving contraction operations and prove that at least one of these operations can always be applied to any given simple rectilinear polygon. We extend this approach to subdivisions and showcase experimental results. Finally, we give examples for standard distance metrics (symmetric difference, Hausdorff- and Fr{\'e}chet-distance) that show that better schematizations might result in worse shapes.",
-  author = "W. Meulemans and {Renssen, van}, A.M. and B. Speckmann",
+  abstract = "We describe an area-preserving subdivision schematization algorithm:
+  the area of each region in the input equals the area of the corresponding region in the output.
+  Our schematization is axis-aligned, the final output is a rectilinear subdivision.
+  We first describe how to convert a given subdivision into an area-equivalent rectilinear subdivision.
+  Then we define two area-preserving contraction operations
+  and prove that at least one of these operations can always be applied to any given simple rectilinear polygon.
+  We extend this approach to subdivisions and showcase experimental results.
+  Finally, we give examples for standard distance metrics
+  (symmetric difference, Hausdorff- and Fr{\'e}chet-distance)
+  that show that better schematizations might result in worse shapes.",
+  author = "Wouter Meulemans and Andr\'{e} {van Renssen} and Bettina Speckmann",
   year = "2010",
   url = {https://research.tue.nl/en/publications/area-preserving-subdivision-schematization},
   series = "Lecture Notes in Computer Science",
@@ -3870,7 +3940,7 @@ abstract = {This article investigates the short lived digital typography graduat
   year      = {1992},
 }
 
-https://research.tue.nl/en/publications/area-preserving-subdivision-schematization
+
 @InProceedings{MeyersEtal:1991:Surfaces,
   author     = {David Meyers and Shelly Skinner and Kenneth Sloan},
   booktitle  = {Proceedings of Graphics Interface 1991},
@@ -3968,10 +4038,21 @@ url={https://dspace.mit.edu/handle/1721.1/42237},
   year    = {1978},
 }
 
+
+@TechReport{Monmonier:1977:MapsDistortion,
+  author      = {Mark Monmonier},
+  institution = {Association of American Geographers},
+  title       = {Maps, distortion, and meaning},
+  number      = {75-4},
+  type        = {Resource Paper},
+  year        = {1977},
+  url = {https://eric.ed.gov/?id=ED155112},
+}
+
 @TechReport{MooreWarren:1990:AlgebraicSurfaces,
   author      = {Moore, Doug and Warren, Joe},
   institution = {Rice U},
-  title       = {Approximation of Dense Scattered Data Using Algebraic Surfaces},
+  title       = {Approximation of dense scattered data using algebraic surfaces},
   number      = {90-135},
   type        = {TR},
   year        = {1990},
@@ -4169,7 +4250,7 @@ author = {Gerrit Noordzij and Robin Kinross},
 }
 
 @Online{NusratKobourov:2016:StateArtCartograms,
-  title={The State of the Art in Cartograms},
+  title={The state of the art in cartograms},
   author={Sabrina Nusrat and Stephen Kobourov},
   year={2016},
   month=sep,
@@ -4262,6 +4343,17 @@ url={https://github.com/openjdk/jdk},
   year   = {2019},
 }
 
+@article{OSullivanManson:2015:PhysicsGeographyEnvy,
+  author = {{O{'}Sullivan}, David and Manson, Steven},
+  year = {2015},
+  month = {07},
+  pages = {},
+  title = {Do physicists have geography envy? And what can geographers learn from it?},
+  volume = {105},
+  journal = {Annals of the Association of American Geographers},
+  doi = {10.1080/00045608.2015.1039105},
+  url = {https://www.researchgate.net/publication/280500135_Do_Physicists_Have_Geography_Envy_And_What_Can_Geographers_Learn_from_It},
+}
 @Online{Palais:1994:JaffeQuinn,
   author        = {Richard S. Palais},
   title         = {Editor's column (on an article by Jaffe and Quinn)},
@@ -4840,12 +4932,12 @@ note = { Transcript at
   year      = {1992},
 }
 
-@Online{ShiEtAl:2020:CartogramGodPractices,
+@Online{ShiEtAl:2020:CartogramGoodPractices,
   author       = {Tingsheng Shi and
                   Ian K. Duncan and
                   Yen{-}Ning Chang and
                   Michael T. Gastner},
-  title        = {Motivating Good Practices for the Creation of Contiguous Area Cartograms},
+  title        = {Motivating good practices for the creation of contiguous area cartograms},
   year         = {2020},
   url          = {https://arxiv.org/abs/2006.00285},
 }
@@ -4930,11 +5022,11 @@ Sep 19-21, 2005, Dublin Ireland.},
 	is given together with both forward and inverse equations for each
 	projection involved.},
   author = {Snyder, John P.},
-  institution = {U. S. Geological Survey},
+  institution = {US Geological Survey},
   number = 1395,
-  publisher = {U.S. G.P.O. : For sale by the Supt. of Docs.},
-  series = {U. S. G. S. Professional Paper},
-  title = {Map projections -- A working manual},
+  publisher = {US GPO : For sale by the Supt. of Docs.},
+  series = {USGS Professional Paper},
+  title = {Map projections --- a working manual},
   url = {https://pubs.usgs.gov/pp/1395/report.pdf},
   year = 1987
 }
@@ -5027,6 +5119,17 @@ url={http://www.practicallyefficient.com/2017/10/13/from-boiling-lead-and-black-
   year      = {1991},
 }
 
+@article{Sun:2020:ForcesGenerateCartograms,
+  author = {Sun, Shipeng},
+  year = {2020},
+  month = {05},
+  pages = {1-19},
+  title = {Applying forces to generate cartograms: a fast and flexible transformation framework},
+  volume = {47},
+  journal = {Cartography and Geographic Information Science},
+  doi = {10.1080/15230406.2020.1745092},
+  url = {https://www.sunsp.net/research.html},
+}
 
 @book{SussmanWisdom:2001:SICM,
   author    = {Gerald J. Sussman and
@@ -5234,7 +5337,7 @@ url={http://www.ams.org/arc/styleguide/mit-2.pdf},
 
 @article{Tobler:2004:ThirtyFiveYearsCartograms,
   author = {Waldo Tobler},
-  title = {Thirty Five Years of Computer Cartograms},
+  title = {Thirty five years of computer cartograms},
   journal = {Annals of the Association of American Geographers},
   volume = {94},
   number = {1},
@@ -6401,6 +6504,26 @@ url={https://www.quantamagazine.org/mathematicians-discover-the-perfect-way-to-m
   title={I hate your favorite election map},
   year={2008},
   url={https://andywoodruff.com/blog/i-hate-your-favorite-election-map/},
+  annote = {
+  Complains (correctly) about difficulty of getting much from difussion cartograms,
+  specifically the county level election map at https://websites.umich.edu/~mejn/election/2016/.
+  Doesn't notice the issues with intermediate red-blue color scale.
+  Prefers the locally less distorted maps at https://www.mappingworlds.nl/,
+  which give up topoligical correctness: probably right about that.},
+}
+
+@online{Woodruff:2010:ValueByAlphaMaps,
+  author={Andy Woodruff},
+  title={Value-by-alpha maps},
+  year={2010},
+  url={https://andywoodruff.com/blog/value-by-alpha-maps/},
+  annote = {
+  Essentially just representing 2 dimensions by hue and 'saturation/value',
+  or, more precisely, hue and interpolation between a fully opaque hsv color and a base color.
+  Basically doesn't work, which he seems to recognize:
+  important small regions, eg Manahattan, are invisible;
+  consistency of delicate color changes impossible across devices,
+  and not clearly perceptible anyway.},
 }
 
 @Article{WyvillEtal:1986:SoftObjects,
